tests/functionalTests/valid/code/putInt.hs
main :: IO ();
main = putInt 523;