tests/functionalTests/invalid/code/intTooBig.hs
main :: IO ();
main = putInt 2147483648;